--- a/index.html
+++ b/index.html
@@ -1,109 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basic table</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <h2>Daily Planner</h2>
 
     <!-- Iteration 1: Use appropriate tag for table -->
-   <table>
+    <table>
 
-        <!-- Iteration 2:Colour 1st , 2nd and 3rd column with "white", "#D3EBCD" and "#AEDBCE" respectively -->
+      <!-- Iteration 2: Use appropriate tag to define "URGENT" and "NOT URGENT" as 2nd and 3rd column header respectively-->
+        <!-- Note : Keep 1st row of 1st cell as empty -->
 
-        <colgroup>
-            <col style="background-color: white;">
-            <col style="background-color: #D3EBCD;">
-            <col style="background-color: #AEDBCE;">
-        </colgroup>
+      <tr>
+        <th></th>
+        <th>URGENT</th>
+        <th>NOT URGENT</th>
+      </tr>
 
-        <!-- Iteration 3:Use appropriate tag to define "URGENT","NOT URGENT" as top header -->
+      <!-- Iteration 3: Use appropriate tag to define "IMPORTANT" as row header -->
+        <!-- Note : Give "IMPORTANT" a class of "write-vertical" and span it to 5 rows -->
+      <tr>
+        <th rowspan="5" class="write-vertical">IMPORTANT</th>
+      </tr>
 
-        <tr>
-            <th>&nbsp;</th>
-            <th>URGENT</th>
-            <th>NOT URGENT</th>
-        </tr>
+      <!-- Iteration 4: Put "Activities:" as a title in 2nd and 3rd column of 2nd row respectively
+                            and give it a class of "title" -->
+      <tr>
+        <td class="title">Activities:</td>
+        <td class="title">Activities:</td>
+      </tr>
 
-        <!-- Iteration 4: Use appropriate tag to define "IMPORTANT" and  "NOT IMPORTANT" as Vertical header -->
+      <!-- Iteration 5: Fill next three consecutive rows of "2nd column" with values:-
+                            Submit assignment📄
+                            Respond to mail📨
+                            Complete web dev Project🖥️ -->
 
-            <!-- Iteration 5:Give "IMPORTANT" and "NOT IMPORTANT" a class of "write-vertical" and
-                        and span each to 5 rows -->
-            <tr>
-                <th rowspan="5" class="write-vertical">IMPORTANT</th> 
-            </tr>
-            
-            <!-- Iteration 6: Put "Activities:" in all the four blocks and give it a class of "title" -->
-            <tr>
-                <td class="title">Activities:</td>
-                <td class="title">Activities:</td>
-            </tr>
+      <!-- Iteration 6: Fill next three consecutive rows of "3rd column" with values:-
+                            Capability improvement👨‍💻
+                            Learn a new skill🦾
+                            Workout🏃‍♂️ -->
 
-<!-- 
-        Iteration 7: Fill the first block(i.e IMPORTANT and URGENT block) with Values
-                        1.Submiting assignment
-                        2.Responding to mail
-                        3.Completing the club deadline -->
+      <tr>
+        <td>Submit assignment📄</td>
+        <td>Capability improvement👨‍💻</td>
+      </tr>
 
-<!-- 
-        Iteration 8: Fill the second block(i.e IMPORTANT and NOT URGENT block) with Values
-                        1.Capability improvement
-                        2.Take breakfast
-                        3.Exercise -->        
+      <tr>
+        <td>Respond to mail📨</td>
+        <td>Learn a new skills🦾</td>
+      </tr>
+      <tr>
+        <td>Complete web dev Project🖥️</td>
+        <td>Workout🏋️‍♂️</td>
+      </tr>
 
-        <tr>
-            <td>Submiting assignment</td>
-            <td>Capability improvement</td>
-        </tr>
+      <!-- Iteration 7: Use appropriate tag to define "NOT IMPORTANT" as next row header -->
+        <!-- Note: Give "NOT IMPORTANT" a class of "write-vertical" and span it to 5 rows -->
 
-        <tr>
-            <td>Responding to mail</td>
-            <td>Take breakfast</td>
-        </tr>
-        <tr>
-            <td>Completing the club deadline</td>
-            <td>Exercise</td>
-        </tr>
+      <tr>
+        <th rowspan="5" class="write-vertical">NOT IMPORTANT</th>
+      </tr>
 
-        <tr>
-            <th rowspan="5" class="write-vertical">NOT IMPORTANT</th> 
-        </tr>
+      <!-- Iteration 8: Put "Activities:" in 2nd and 3rd column of 6th row respectively
+                            and give it a class of "title" -->
+      <tr>
+        <td class="title">Activities:</td>
+        <td class="title">Activities:</td>
+      </tr>
 
-<!-- 
-        Iteration 9: Fill the first block(i.e NOT IMPORTANT and URGENT block) with Values
-                        1.Scheduling
-                        2.Club meetings
-                        3.Responding to text -->
+      <!-- Iteration 9: Fill next three consecutive rows(row 7 to 9 ) of "2nd column" with values:-
+                            Pay bills💸
+                            Club meetings🧑🏽‍🤝‍🧑🏾
+                            Respond to text📤 -->
 
-<!-- 
-        Iteration 10: Fill the second block(i.e NOT IMPORTANT and NOT URGENT block) with Values
-                        1.Play basketball
-                        2.Social media
-                        3.Eating junk food -->    
+      <!-- Iteration 10: Fill next three consecutive rows(row 7 to 9 ) of "3rd column" with values:-
+                            Play basketball🏀
+                            Use social media📱
+                            Watch a movie🍿 -->
+      <tr>
+        <td>Pay bills💸</td>
+        <td>Play basketball🏀</td>
+      </tr>
 
-        <tr>
-            <td class="title">Activities:</td>
-            <td class="title">Activities:</td>
-        </tr>
-        <tr>
-            <td>Scheduling</td>
-            <td>Play basketball</td>
-        </tr>
+      <tr>
+        <td>Club meetings🧑🏽‍🤝‍🧑🏾</td>
+        <td>Use social media📱</td>
+      </tr>
+      <tr>
+        <td>Respond to text📤</td>
+        <td>Watch a movie🍿</td>
+      </tr>
 
-        <tr>
-            <td>Club meetings</td>
-            <td>Social media</td>
-        </tr>
-        <tr>
-            <td>Responding to text</td>
-            <td>Eating junk food</td>
-        </tr>
+      <!-- Iteration 11:Use appropriate tag to Colour 1st, 2nd and 3rd column with "#fff", "#D3EBCD" and "#AEDBCE" respectively -->
 
-   </table> 
-</body>
+      <colgroup>
+        <col style="background-color: #fff" />
+        <col style="background-color: #d3ebcd" />
+        <col style="background-color: #aedbce" />
+      </colgroup>
+    </table>
+  </body>
 </html>
