--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <table>
 
       <!-- Iteration 2: Use appropriate tag to define "URGENT" and "NOT URGENT" as 2nd and 3rd column header respectively-->
-        <!-- Note : Keep 1st row of 1st cell as empty -->
+        <!-- Note: Keep 1st column of 1st row as empty -->
 
       <tr>
         <th></th>
@@ -23,7 +23,7 @@
       </tr>
 
       <!-- Iteration 3: Use appropriate tag to define "IMPORTANT" as row header -->
-        <!-- Note : Give "IMPORTANT" a class of "write-vertical" and span it to 5 rows -->
+        <!-- Note: Give "IMPORTANT" a class of "write-vertical" and span it to 5 rows -->
       <tr>
         <th rowspan="5" class="write-vertical">IMPORTANT</th>
       </tr>
