--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <th rowspan="5" class="write-vertical">IMPORTANT</th>
       </tr>
 
-      <!-- Iteration 4: Put "Activities:" as a title in 2nd and 3rd column of 2nd row respectively
+      <!-- Iteration 4: Put "Activities:" in 2nd and 3rd column of 2nd row 
                             and give it a class of "title" -->
       <tr>
         <td class="title">Activities:</td>
@@ -103,6 +103,7 @@
         <col style="background-color: #d3ebcd" />
         <col style="background-color: #aedbce" />
       </colgroup>
+      
     </table>
   </body>
 </html>
